# SoundCloud-Flutter

./: .gitignore  README.md
.github/workflows/: build.yml
Core/engine/: pubspec.yaml
Core/engine/assets/i18n/: en.json  ru.json  tr.json
Core/engine/lib/: sc_engine.dart
Core/engine/lib/src/: config.dart  providers.dart
Core/engine/lib/src/i18n/: i18n.dart  translations.dart
Core/engine/lib/src/providers/: account.dart  album.dart  artist.dart  auth.dart  core.dart  discover.dart  featured.dart  home.dart  host_status.dart  library.dart  now_bar_panel.dart  offline.dart  pagination.dart  pay.dart  playback_persist.dart  player.dart  playlist.dart  providers.dart  qr.dart  queue.dart  router.dart  search.dart  search_preview.dart  settings.dart  social.dart  track.dart  user.dart  wallpaper.dart
Core/engine/lib/src/rust/: api.dart  api.freezed.dart  data.dart  data_pay.dart  data_social.dart  dto.dart  dto_pay.dart  dto_social.dart  dto_social.freezed.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
Core/engine/lib/src/tray/: mini_player_app.dart  mini_player_host.dart  mini_player_ipc.dart
Core/engine/lib/src/ui/: album_page.dart  artist_page.dart  discover_page.dart  header_bar.dart  home_page.dart  host_status_overlay.dart  library_collection_page.dart  library_page.dart  login_page.dart  now_playing_bar.dart  offline_page.dart  playlist_page.dart  root_shell.dart  search_screen.dart  settings_page.dart  star_page.dart  track_meta.dart  track_page.dart  user_page.dart
Core/engine/test/: bridge_smoke_test.dart
Core/shared/: Cargo.toml
Core/shared/crates/sc-audio/: Cargo.toml
Core/shared/crates/sc-audio/src/: analyser.rs  device.rs  engine.rs  engine_device.rs  engine_reload.rs  eq.rs  lib.rs  output.rs  types.rs
Core/shared/crates/sc-auth/: Cargo.toml
Core/shared/crates/sc-auth/src/: lib.rs  store.rs
Core/shared/crates/sc-bff/: Cargo.toml
Core/shared/crates/sc-bff/src/: client.rs  error.rs  lib.rs
Core/shared/crates/sc-bff/src/dto/: album.rs  artist.rs  auth.rs  comment.rs  discover.rs  envelope.rs  featured.rs  flex.rs  misc.rs  mod.rs  playlist.rs  search.rs  star.rs  tag_list.rs  track.rs  user.rs  wave.rs
Core/shared/crates/sc-bff/src/endpoints/: album.rs  artist.rs  aura.rs  auth.rs  auth_link.rs  batch.rs  discover.rs  library.rs  misc.rs  mod.rs  mutations.rs  playlist.rs  playlist_edit.rs  reco.rs  resolve.rs  search.rs  track.rs  user.rs
Core/shared/crates/sc-bff/src/pay/: client.rs  dto.rs  endpoints.rs  mod.rs
Core/shared/crates/sc-bridge/: Cargo.toml
Core/shared/crates/sc-bridge/src/: api.rs  data.rs  data_pay.rs  data_social.rs  dto.rs  dto_pay.rs  dto_social.rs  frb_generated.rs  lib.rs  map.rs  map_misc.rs  map_pay.rs
Core/shared/crates/sc-cache/: Cargo.toml
Core/shared/crates/sc-cache/src/: cache.rs  inventory.rs  lib.rs  manage.rs  transcode.rs
Core/shared/crates/sc-core/: Cargo.toml
Core/shared/crates/sc-core/src/: auth.rs  cache.rs  config.rs  data.rs  data_social.rs  lib.rs  pay.rs  ports.rs  runtime.rs
Core/shared/crates/sc-domain/: Cargo.toml
Core/shared/crates/sc-domain/src/: album.rs  artist.rs  auth.rs  cache.rs  comment.rs  discover.rs  featured.rs  history.rs  ids.rs  lib.rs  lyrics.rs  page.rs  pay.rs  playlist.rs  queue.rs  star.rs  streams.rs  track.rs  user.rs  wave.rs
Core/shared/crates/sc-drm/: Cargo.toml
Core/shared/crates/sc-drm/src/: lib.rs  segment.rs
Core/shared/crates/sc-net/: Cargo.toml
Core/shared/crates/sc-net-bypass/: Cargo.toml
Core/shared/crates/sc-net-bypass/src/: lib.rs  probe.rs  socks.rs  state.rs  tamper.rs
Core/shared/crates/sc-net-probe/: Cargo.toml
Core/shared/crates/sc-net-probe/src/: lib.rs  prober.rs
Core/shared/crates/sc-net/src/: client.rs  config.rs  decorate.rs  dispatch.rs  error.rs  host.rs  lib.rs  request.rs  retry.rs  route.rs
Core/shared/crates/sc-net/src/api/: mod.rs
Core/shared/crates/sc-net/src/storage/: mod.rs
Core/shared/crates/sc-net/src/stream/: mod.rs
Core/shared/crates/sc-net/src/transport/: bypass.rs  direct.rs  mod.rs  proxy.rs  relay.rs
Core/shared/crates/sc-platform/: Cargo.toml
Core/shared/crates/sc-raw/: Cargo.toml
Core/shared/crates/sc-raw/src/: client.rs  client_id.rs  error.rs  hls.rs  lib.rs  types.rs
Core/shared/crates/sc-wallpapers/: Cargo.toml
Core/shared/crates/sc-wallpapers/src/: lib.rs  store.rs
Core/visual/: pubspec.yaml
Core/visual/lib/: sc_visual.dart
Core/visual/lib/src/: ambient_clock.dart  atmosphere.dart  glass.dart  image_proxy.dart  palette.dart  perf.dart  scroll.dart  smooth_scroll_controller.dart  theme.dart  tokens.dart
Desktop/: README.md
Desktop/app/: .metadata  README.md  pubspec.yaml
Desktop/app/lib/: call_ffi.dart  discord_ffi.dart  main.dart  media_ffi.dart  titlebar.dart  tray_ffi.dart
Desktop/app/linux/: CMakeLists.txt
Desktop/app/linux/runner/: my_application.cc
Desktop/app/macos/Flutter/: GeneratedPluginRegistrant.swift
Desktop/app/macos/Runner.xcodeproj/: project.pbxproj
Desktop/app/windows/: CMakeLists.txt
Desktop/app/windows/runner/: Runner.rc  main.cpp
Desktop/depens/crates/call-agent/: Cargo.toml
Desktop/depens/crates/call-agent/src/: lib.rs
Desktop/depens/crates/desktop-bridge/: Cargo.toml
Desktop/depens/crates/desktop-bridge/src/: call.rs  discord.rs  lib.rs  media.rs  tray.rs
Desktop/depens/crates/discord-rpc/: Cargo.toml
Desktop/depens/crates/media-controls/: Cargo.toml
Desktop/depens/crates/tray/: Cargo.toml
Desktop/depens/crates/tray/src/: lib.rs
Desktop/utils/call/client/: Cargo.toml
Desktop/utils/decrypt/: Cargo.toml
Desktop/utils/decrypt-client/: Cargo.toml
Desktop/utils/decrypt-client/src/: lib.rs
Desktop/utils/decrypt/src/: lib.rs
Desktop/utils/dpi-desync/: Cargo.toml
Desktop/utils/dpi-desync/src/: lib.rs  probe.rs  socks.rs  state.rs  tamper.rs
(+198 files in other folders)
