[package]
name = "sc-audio"
version = "0.1.0"
edition = "2024"

[dependencies]
biquad = "0.6.0"
hex = "0.4.3"
rodio = { version = "0.22.2", default-features = false, features = ["playback", "symphonia-aac", "symphonia-isomp4"] }
rustfft = "6.4.1"
serde_json = "1.0.150"
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt", "sync", "time", "macros"] }
