[package]
name = "sc-bff"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.32"
sc-domain = { version = "0.1.0", path = "../sc-domain" }
sc-net = { version = "0.1.0", path = "../sc-net" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["sync"] }
urlencoding = "2.1.3"
