[package]
name = "sc-bridge"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
sc-core = { version = "0.1.0", path = "../sc-core" }
sc-domain = { version = "0.1.0", path = "../sc-domain" }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "sync"] }
