[package]
name = "sc-cache"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.12.0"
ffmpeg-sidecar = "2.5.2"
futures = "0.3.32"
sc-domain = { version = "0.1.0", path = "../sc-domain" }
sc-net = { version = "0.1.0", path = "../sc-net" }
sc-raw = { version = "0.1.0", path = "../sc-raw" }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt", "fs", "io-util", "macros"] }
urlencoding = "2.1.3"
