[package]
name = "sc-net"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
bytes = "1.12.0"
futures = "0.3.32"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "json", "stream"] }
sc-net-bypass = { version = "0.1.0", path = "../sc-net-bypass" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt", "time", "sync", "macros"] }
tracing = "0.1.44"
url = "2.5.8"
