[package]
name = "call-agent"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib"]

[dependencies]
call-client = { version = "0.1.0", path = "../../../utils/call/client" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "time"] }
