[package]
name = "desktop-bridge"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
call-agent = { version = "0.1.0", path = "../call-agent" }
discord-rpc = { version = "0.1.0", path = "../discord-rpc" }
media-controls = { version = "0.1.0", path = "../media-controls" }
tray = { version = "0.1.0", path = "../tray" }
