[package]
name = "tray"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib"]

[dependencies]
image = { version = "0.25.10", default-features = false, features = ["png"] }
ksni = { version = "0.3.5", default-features = false, features = ["tokio"] }
tokio = { version = "1.52.3", features = ["rt", "net", "time"] }
